RefactoredCode